// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a list of Products when items are supplied 1`] = `
<List
  classes={Object {}}
  getItemKey={[Function]}
  items={
    Array [
      Object {
        "item_id": 1,
        "name": "unit test",
        "price": 99,
        "product_type": "product type",
        "qty": 1,
        "quote_id": 1,
        "sku": "sku1",
      },
      Object {
        "item_id": 2,
        "name": "unit test",
        "price": 99,
        "product_type": "product type",
        "qty": 1,
        "quote_id": 1,
        "sku": "sku2",
      },
    ]
  }
  render="ul"
  renderItem={[Function]}
  selectionModel="radio"
/>
`;

exports[`renders a list with no items when items are not supplied 1`] = `
<List
  classes={Object {}}
  getItemKey={[Function]}
  items={Array []}
  render="ul"
  renderItem={[Function]}
  selectionModel="radio"
/>
`;
